fixed the drop down, so it won't get cut off by the browser window.

--- a/app/public/assets/css/style.css
+++ b/app/public/assets/css/style.css
@@ -10,6 +10,11 @@ html {
     top: -42px;
 }
 
+.dropdown-menu {
+    position: absolute;
+    left: -100px;
+}
+
 .profile-handle img {
     max-width: 2000px!important;
     margin: 0 auto;
